prusti-tests/tests/verify_overflow/ui/counterexamples/account.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/account.rs:17:31
   |
17 | fn has_money(acc: Account) -> bool {
   |                               ^^^^
   |
note: the error originates here
  --> $DIR/account.rs:17:1
   |
17 | / fn has_money(acc: Account) -> bool {
18 | |     get_balance(acc) > 0
19 | | }
   | |_^
note: counterexample for "acc"
       value:   Account {
            balance: 0,
        }
  --> $DIR/account.rs:17:14
   |
17 | fn has_money(acc: Account) -> bool {
   |              ^^^
note: counterexample for "result"
       value:   false
  --> $DIR/account.rs:18:5
   |
18 |     get_balance(acc) > 0
   |     ^^^^^^^^^^^^^^^^^^^^
note: counterexample for "get_balance()"
       value:   0
  --> $DIR/account.rs:18:5
   |
18 |     get_balance(acc) > 0
   |     ^^^^^^^^^^^^^^^^

error: aborting due to previous error

